# death

./: .gitignore  CMakeLists.txt  LICENSE  README.rst  pyproject.toml
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  CountMatrix.cpp  CountMatrix.hpp  Distribution.hpp  IRLSSolver.cpp  IRLSSolver.hpp  OLSSolver.cpp  OLSSolver.hpp  bindings.cpp
cpp/bindings/: module.cpp
cpp/tests/: CMakeLists.txt
death/: _core.pyi  _libdeath.pyi  dataset.py  main.py  nb.py  pipeline.py  result.py  size_factor.py
death/steps/: __init__.py  base.py  dispersion.py  fitting.py  normalization.py  testing.py
death/utils/: filter.py  visualization.py
notes/: bam.md  normalization.md  txdb.md
tests/: test_size_factor.py
