[project]
name = "death"
version = "0.1.0"
description = "Differential Expression Analysis Tool for High-throughput NGS"
requires-python = ">=3.13"
authors = [
    {name = "Enfu", email = "efliao@cs.nycu.edu.tw"}
]
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pybind11>=3.0.1",
    "pybind11-stubgen>=2.5.5",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = ["pytest>=8.4.2"]

[build-system]
requires = ["scikit-build-core", "pybind11>=3.0.1"]
build-backend = "scikit_build_core.build"

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.scikit-build]
cmake.source-dir = "."
cmake.targets = ["_core"]
cmake.define = {"DEATH_BUILD_TESTS" = "OFF"}
wheel.install-dir = "death"

[project.optional-dependencies]
