[project]
name = "death"
version = "0.1.0"
description = "Differential Expression Analysis Tool for High-throughput NGS"
requires-python = ">=3.10"
authors = [{ name = "Enfu", email = "efliao@cs.nycu.edu.tw" }]
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "patsy>=1.0.2",
    "plotly>=6.5.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scipy>=1.15.3",
    "statsmodels>=0.14.6",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pybind11-stubgen>=2.5.5",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]

[build-system]
requires = ["scikit-build-core", "pybind11>=3.0.1"]
build-backend = "scikit_build_core.build"

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.scikit-build]
cmake.source-dir = "."
cmake.targets = ["_core"]
cmake.define = { "DEATH_BUILD_TESTS" = "OFF" }
wheel.install-dir = "death"

[project.optional-dependencies]
